Introduce design fixes (#44)

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -23,11 +23,11 @@ This scenario is played over 13 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svg{bronze} units with the \textit{highest} Recruitment cost
-  \item A Pack of \svg{bronze} units with the \textit{lowest} Recruitment cost
+  \item A Few \svgunit{bronze} units with the \textit{highest} Recruitment cost
+  \item A Pack of \svgunit{bronze} units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
 \textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement
 
@@ -92,9 +92,9 @@ During this scenario:
     \end{enumerate}
     \item \textbf{[Sacrifice]} Remove a * faction Unit card from your Unit deck in exchange for:
     \begin{enumerate}
-      \item *\svg{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
-      \item *\svg{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
-      \item *\svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
+      \item *\svgunit{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
+      \item *\svgunit{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
+      \item *\svgunit{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit card was on the Pack side, \textbf{Search (2)} the \svgunit{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
     \end{enumerate}
   \end{enumerate}
   \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
@@ -118,6 +118,14 @@ During this scenario:
   \item A Hero with the Grail token who possesses the title of ``\textcolor{darkcerulean}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
   \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat round, if the Hero is a \textcolor{darkcerulean}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.''
 \end{itemize}
+
+\vspace*{\fill}
+
+\begin{center}
+  \transparent{0.3}{\includegraphics[width=0.5\linewidth, keepaspectratio]{\art/bless.png}}
+\end{center}
+
+\vspace*{\fill}
 
 \end{multicols*}
 
