--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -25,11 +25,11 @@ This scenario is played over 14 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svg{bronze} units with the \textit{lowest} Recruitment cost
-  \item A Few \svg{bronze} units with the \textit{highest} Recruitment cost
+  \item A Pack of \svgunit{bronze} units with the \textit{lowest} Recruitment cost
+  \item A Few \svgunit{bronze} units with the \textit{highest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
 
 \textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile
 
@@ -153,16 +153,16 @@ During this scenario:
   \centering
   \medskip
 
-  \newcommand{\bronze}[0]{\svg[12]{bronze}}
-  \newcommand{\silver}[0]{\svg[12]{silver}}
-  \newcommand{\golden}[0]{\svg[12]{golden}}
-  \newcommand{\azure}[0]{\svg[12]{azure}}
+  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
+  \newcommand{\silver}[0]{\svgunit[12]{silver}}
+  \newcommand{\golden}[0]{\svgunit[12]{golden}}
+  \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[1.8]{No additional\\changes} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
@@ -218,16 +218,16 @@ During this scenario:
   \centering
   \medskip
 
-  \newcommand{\bronze}[0]{\svg[12]{bronze}}
-  \newcommand{\silver}[0]{\svg[12]{silver}}
-  \newcommand{\golden}[0]{\svg[12]{golden}}
-  \newcommand{\azure}[0]{\svg[12]{azure}}
+  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
+  \newcommand{\silver}[0]{\svgunit[12]{silver}}
+  \newcommand{\golden}[0]{\svgunit[12]{golden}}
+  \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[2.8]{No additional\\changes} &
   \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Counterattack}} &
@@ -282,20 +282,20 @@ During this scenario:
   \centering
   \medskip
 
-  \newcommand{\bronze}[0]{\svg[12]{bronze}}
-  \newcommand{\silver}[0]{\svg[12]{silver}}
-  \newcommand{\golden}[0]{\svg[12]{golden}}
-  \newcommand{\azure}[0]{\svg[12]{azure}}
+  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
+  \newcommand{\silver}[0]{\svgunit[12]{silver}}
+  \newcommand{\golden}[0]{\svgunit[12]{golden}}
+  \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[2.5]{No additional\\changes} &
   \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 20} &
   \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32} &
-  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to corrosion armor decrease} \\
+  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to Corrosion armor decrease} \\
   \end{tabularx}
 }
 
@@ -348,20 +348,22 @@ During this scenario:
   \end{itemize}
 }
 
+\bigskip
+
 \hommtable[]{7}{
   \centering
   \medskip
 
-  \newcommand{\bronze}[0]{\svg[12]{bronze}}
-  \newcommand{\silver}[0]{\svg[12]{silver}}
-  \newcommand{\golden}[0]{\svg[12]{golden}}
-  \newcommand{\azure}[0]{\svg[12]{azure}}
+  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
+  \newcommand{\silver}[0]{\svgunit[12]{silver}}
+  \newcommand{\golden}[0]{\svgunit[12]{golden}}
+  \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
   \begin{tabularx}{\linewidth}{XXXX}
-  \darkcell{\raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}} &
-  \darkcell{\raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}}\\
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[1.6]{No additional\\changes} &
   \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 18} &
   \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26} &
