--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -29,8 +29,8 @@ This scenario is played over 16 rounds (15 on Impossible difficulty).
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svg{bronze} units of your choice.
-  \item A Few \svg{bronze} units of your choice.
+  \item A Pack of \svgunit{bronze} units of your choice.
+  \item A Few \svgunit{bronze} units of your choice.
 \end{itemize}
 
 \textbf{Town Buildings:} None
@@ -185,7 +185,7 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
 \vspace*{\fill}
 
 \begin{center}
-  \includegraphics[width=0.8\linewidth]{\art/magic_arrow.png}
+  \transparent{0.3}{\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/land_mine.png}}
 \end{center}
 
 \vspace*{\fill}
