--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -164,23 +164,38 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:31
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Starting Units:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item A Pack of \\svg{bronze} units of your choice.\n"
+#| "  \\item A Few \\svg{bronze} units of your choice.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svg{bronze} units with the \\textit{lowest} Recruitment cost\n"
-"  \\item A Few \\svg{bronze} units with the \\textit{highest} Recruitment cost\n"
+"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Jednostki Początkowe:}\n"
+"\\begin{itemize}\n"
+"  \\item Grupa \\svg{bronze} jednostek do wyboru.\n"
+"  \\item Garstka \\svg{bronze} jednostek do wyboru.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:33 campaigns/inferno_devilish_plan.tex:41
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, City Hall\n"
+"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, City Hall\n"
 "\n"
 msgstr ""
+"\\textbf{Budynki Początkowe:} Brak\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:35
@@ -355,22 +370,54 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:172
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
+#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
+#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
+#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
-"\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+"{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
+"\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
+"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
+"\\textbf{Impossible}}\\\\ \\lightcell[1.8]{No additional\\\\changes} & "
+"\\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
+"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"\\end{tabularx} }"
+msgstr ""
+"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[1.8]{No additional\\"
-"\\changes} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 22} & \\lightcell[1.8]"
+"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
+"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"30} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +2 "
-"\\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} \\end{tabularx} }"
-msgstr ""
+"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
+"armor decrease} \\\\ \\end{tabularx} }\n"
+"\\clearpage"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:214
@@ -410,23 +457,54 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:237
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
+#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
+#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
+#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
-"\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+"{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
+"\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
+"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
+"\\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\\\changes} & "
+"\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Counterattack}} "
+"& \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 32 \\\\ +1 Counterattack \\\\ Remove additional 2 "
+"\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
+msgstr ""
+"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\"
-"\\changes} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 22} & \\lightcell[2.8]"
-"{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"26 \\\\ +1 Counterattack}} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Counterattack \\"
-"\\ Remove additional 2 \\svg{damage-table} by consuming Golems} \\\\ "
-"\\end{tabularx} }"
-msgstr ""
+"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
+"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
+"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
+"armor decrease} \\\\ \\end{tabularx} }\n"
+"\\clearpage"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:278
@@ -465,21 +543,37 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:301
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
+#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
+#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
+#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
-"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
-"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
-"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
-"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
+"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+"{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
+"\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
+"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
+"\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
+"\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
-"armor decrease} \\\\ \\end{tabularx} }"
+"40 \\\\ +1 to Corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
@@ -538,20 +632,51 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: clash/the_hunt.tex:370
+#: clash/the_hunt.tex:372
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
+#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
+#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
+#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
+#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
+#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
-"\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
+"{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
+"\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
+"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
+"& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{azure}} "
+"\\textbf{Impossible}}\\\\ \\lightcell[1.6]{No additional\\\\changes} & "
+"\\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 18} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 26} & \\lightcell[1.6]"
+"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"32 \\\\ +1 Mirage} \\\\ \\end{tabularx} }"
+msgstr ""
+"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
 "{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[1.6]{No additional\\"
-"\\changes} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 18} & \\lightcell[1.6]"
+"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
+"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"26} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Mirage} \\\\ "
-"\\end{tabularx} }"
-msgstr ""
+"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
+"armor decrease} \\\\ \\end{tabularx} }\n"
+"\\clearpage"
