--- a/metadata.tex
+++ b/metadata.tex
@@ -36,6 +36,7 @@
 \usepackage[subfigure]{tocloft}
 \usepackage{tikz}
 \usepackage{titlesec}
+\usepackage{transparent}
 \usepackage{verbatim}
 \usepackage{varwidth}
 \usepackage{wrapfig}
@@ -44,6 +45,7 @@
 \usepackage{xstring}
 \usepackage{soul}
 \usepackage{xifthen}
+\usepackage{xparse}
 
 \usepackage[hang, symbol, perpage]{footmisc}
 \renewcommand{\footnotemargin}{1em}
@@ -90,7 +92,7 @@
 \def\examples{\_assets/examples}
 \def\images{\_assets/images}
 \def\layout{\_assets/layout}
-\def\map_locations{\_assets/map-locations}
+\def\maps{\_assets/maps}
 \def\skills{\_assets/skills}
 \def\spells{\_assets/spells}
 \def\svgs{\_assets/glyphs}
@@ -100,10 +102,12 @@
 
 \def\repourl{https://github.com/qwrtln/Homm3BG-mission-book}
 
-\newcommand{\svg}[2][]{%
-  \ifthenelse{\equal{#1}{}}%
-  {\includesvg[height=10px]{\svgs/\detokenize{#2}.svg}}%
-  {\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}%
+\newcommand{\svg}[2][10]{%
+  {\raisebox{-0.15\height}{\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}}%
+}%
+
+\newcommand{\svgunit}[2][10]{%
+  {\raisebox{-0.1\height}{\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}}%
 }%
 
 \newcommand{\resources}[3]{%
@@ -114,9 +118,9 @@
     | >{\centering\arraybackslash}X%
     | >{\centering\arraybackslash}X | }%
    \hline%
-   #1 \raisebox{-.2\height}{\svg[15]{gold}} &
-   #2 \raisebox{-.2\height}{\svg[15]{building_materials}} &
-   #3 \raisebox{-.2\height}{\svg[15]{valuables}} \\%
+   #1 {\raisebox{-0.2\height}{\includesvg[height=15px]{\svgs/gold.svg}}} &
+   #2 {\raisebox{-0.2\height}{\includesvg[height=15px]{\svgs/building_materials.svg}}} &
+   #3 {\raisebox{-0.2\height}{\includesvg[height=15px]{\svgs/valuables.svg}}} \\%
    \hline%
   \end{tabularx}%
   \egroup%
@@ -124,7 +128,7 @@
 
 \renewcommand{\labelitemi}{
   \begin{tikzpicture}
-    \node (listdot) [circle, blur shadow={fill=camel, shadow yshift=0pt, shadow xshift=0pt, shadow blur radius=1.2pt, shadow blur steps=10}, inner sep=-1.5] {\includegraphics[width=0.7em, valign=c]{\layout/listdot.png}};
+    \node (listdot) [circle, inner sep=-3] {\includegraphics[width=1em, valign=c]{\layout/listdot.png}};
   \end{tikzpicture}
 }
 
@@ -247,23 +251,22 @@
   \sodef\sotitle{}{0.2em}{0.6em}{1.2em}
   \def\oneliner{\equal{#2}{1}}
 
-  \vspace*{-5em}
+  \vspace*{-5.72em}
   \hspace*{-1.3em}
   \makebox[0pt][l]{
   \raisebox{-\totalheight}[0pt][7pt]{
     \ifthenelse{\oneliner}{\def\yscale{1}}{\def\yscale{1.3}}
-    \begin{tikzpicture}
-      \draw (0, 0) node[inner sep=0, yscale=\yscale] (header) {\includegraphics[width=\linewidth, height=0.2\linewidth]{\layout/section_heading.jpg}};
-      \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#5}};
-      \addheadershadow{header}
-    \end{tikzpicture}
+      \begin{tikzpicture}
+        \draw (0, 0) node[inner sep=0, yscale=\yscale] (header){\makebox[\textwidth][c]{\includegraphics[width=1.06\linewidth, height=0.24\linewidth]{\layout/section_heading.png}}};
+        \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#5}};
+      \end{tikzpicture}
     }
   }
   \begin{fullwidth}[leftmargin=0.2\textwidth]
     \begin{center}
-      \vspace{-22pt}
-      \sectionheadertext{\small{\sotitle{#3}}}
       \vspace{-12pt}
+      \sectionheadertext{\small{\sotitle{#3}}}
+      \vspace{-10pt}
       \sectionheadertext{#4}
       \ifthenelse{\oneliner}{}{\vspace{14pt}}
       \cleardoublepage\phantomsection\addcontentsline{toc}{#1}{\protect\numberline{} {} {} {} {}#4}
