--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -119,23 +119,41 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:34
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Starting Units:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item A Pack of \\svg{bronze} units of your choice.\n"
+#| "  \\item A Few \\svg{bronze} units of your choice.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svg{bronze} units with the \\textit{lowest} recruitment cost.\n"
-"  \\item A Few \\svg{bronze} units with the \\textit{highest} recruitment cost.\n"
+"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} recruitment cost.\n"
+"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} recruitment cost.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Jednostki Początkowe:}\n"
+"\\begin{itemize}\n"
+"  \\item Grupa \\svg{bronze} jednostek do wyboru.\n"
+"  \\item Garstka \\svg{bronze} jednostek do wyboru.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:36
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Town Buildings:} None\n"
+#| "\n"
 msgid ""
-"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, Citadel\n"
 "\n"
 msgstr ""
+"\\textbf{Budynki Początkowe:} Brak\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:38
@@ -491,21 +509,77 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
-#: coops/sentinels.tex:147
+#. type: multicols*
+#: coops/sentinels.tex:147 coops/titans_stronghold.tex:105
+#: coops/titans_stronghold.tex:111 clash/bloody_grail.tex:123
+#: clash/bloody_grail.tex:129 sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
 msgid ""
-"\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}\n"
+"\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
 
-#. type: Plain text
-#: coops/sentinels.tex:184
+#. type: tikzpicture
+#: coops/sentinels.tex:154
+#, no-wrap
 msgid ""
-"\\hommtable[]{18}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
-"\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]{bronze}} "
-"\\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}[0]"
-"{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 1.5) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
+msgstr ""
+
+#. type: Plain text
+#: coops/sentinels.tex:192
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
+#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
+#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} "
+#| "& \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
+#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
+#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
+#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
+#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
+#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
+#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
+#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
+#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
+#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
+#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
+#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
+#| "6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
+#| "4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
+#| "\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
+#| "Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+#| "\\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver "
+#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 6\\silver "
+#| "3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
+#| "2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver 4\\golden "
+#| "3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure "
+#| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
+#| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
+#| "\\darkcell[1.7]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
+#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
+#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
+#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
+#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
+#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
+#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
+#| "\\end{tabularx} }"
+msgid ""
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
+"\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
+"\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
+"{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rounds 6 "
 "+ 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\\\ \\darkcell[1.4]"
 "{Easy} & \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
@@ -525,9 +599,50 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Siła Armii Twierdzy "
+"Tytanów}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]{bronze}} "
+"\\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}[0]"
+"{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Łatwy} & "
+"\\darkcell{Normalny} & \\darkcell{Trudny} & \\darkcell{Niemożliwy}\\\\ "
+"\\darkcell[1.2]{1 gracz} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
+"1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
+"\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
+"{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 graczy} & "
+"\\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]"
+"{4\\bronze 5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze "
+"5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver "
+"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 graczy} & \\lightcell[1.8]"
+"{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
+"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver "
+"4\\golden 3\\azure \\linebreak Potem\\linebreak 2\\bronze 4\\silver "
+"3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
+"3\\azure \\linebreak Potem\\linebreak 1\\bronze 4\\silver 5\\golden "
+"3\\azure}\\\\ \\darkcell[1.8]{4 graczy} & \\lightcell[1.8]{10\\bronze "
+"10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
+"6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden "
+"3\\azure \\linebreak Potem\\linebreak 2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure "
+"\\linebreak Potem\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{5 graczy} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
+"1\\azure \\linebreak Potem\\linebreak 7\\bronze 6\\silver 3\\golden "
+"2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure "
+"\\linebreak Potem\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & "
+"\\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
+"Potem\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Potem\\linebreak "
+"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 graczy} & "
+"\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
+"Potem\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
+"{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Potem\\linebreak "
+"6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
+"8\\silver 7\\golden 5\\azure \\linebreak Potem\\linebreak 3\\bronze "
+"7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver "
+"11\\golden 6\\azure \\linebreak Potem\\linebreak 3\\bronze 8\\silver "
+"10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 
 #. type: footnotetext{#2}
-#: coops/sentinels.tex:185
+#: coops/sentinels.tex:195
 msgid ""
 "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
 "random\\label{azure}."
