--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -80,6 +80,16 @@ msgid ""
 "\n"
 msgstr ""
 
+#. type: multicols*
+#: coops/sentinels.tex:147 coops/titans_stronghold.tex:105
+#: coops/titans_stronghold.tex:111 clash/bloody_grail.tex:123
+#: clash/bloody_grail.tex:129 sections/credits.tex:27 sections/credits.tex:31
+#, no-wrap
+msgid ""
+"\\vspace*{\\fill}\n"
+"\n"
+msgstr ""
+
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/titans_stronghold.tex:3
@@ -160,8 +170,8 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svg{bronze} units of your choice.\n"
-"  \\item A Few \\svg{bronze} units of your choice.\n"
+"  \\item A Pack of \\svgunit{bronze} units of your choice.\n"
+"  \\item A Few \\svgunit{bronze} units of your choice.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -192,7 +202,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:45
+#: coops/titans_stronghold.tex:45 coops/emerald_island.tex:42
 #, no-wrap
 msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):\n"
@@ -315,15 +325,6 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:105 coops/titans_stronghold.tex:111
-#: sections/credits.tex:27 sections/credits.tex:31
-#, no-wrap
-msgid ""
-"\\vspace*{\\fill}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
 #: coops/titans_stronghold.tex:109
 #, no-wrap
 msgid ""
@@ -377,6 +378,13 @@ msgid ""
 "& \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
 "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
 "\\end{tabularx} }"
+msgstr ""
+
+#. type: center
+#: coops/titans_stronghold.tex:190
+msgid ""
+"\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"{\\art/land_mine.png}}"
 msgstr ""
 
 #. type: minipage
