--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Campaign name}{Scenario name}{\images/title.png}
+\addscenariosection[subsection]{1}{Campaign name}{Scenario name}{\images/title.png}
 
 \begin{multicols*}{2}
 
@@ -76,6 +76,11 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 ...
 
 \subsection*{\MakeUppercase{Timed Events}}
+
+% Unless you have a rich and non-linear story, write it under specific
+% rounds here.
+%
+% Otherwise create a new subsection "The Story" at the end and refer to it.
 
 \textbf{\nth{2} Round:}
 \begin{itemize}
